--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -1361,37 +1361,16 @@
       function applyPaymentLocks(data) {
         if (!data) return
 
-        const st = String(data.status || '')
         const lock = document.getElementById('payment-lock')
         const lockText = document.getElementById('payment-lock-text')
 
         if (lock && lockText) {
           const t = window.translations[currentLang]?.['finaliser-reservation']
 
-          // Vérifier le statut de la réservation
-          if (st === 'depositPay') {
-            lockText.textContent =
-              t?.locks?.deposit_paid || 'Acompte déjà réglé'
-            lock.style.display = 'flex'
-          } else if (st === 'balancePay') {
-            lockText.textContent =
-              t?.locks?.balance_paid || 'Acompte et solde déjà réglés'
-            lock.style.display = 'flex'
-          } else if (st === 'canceled') {
-            lockText.textContent =
-              t?.locks?.reservation_canceled || 'Réservation annulée'
-            lock.style.display = 'flex'
-          }
+          // ✅ NOUVELLE LOGIQUE : Ordre chronologique des vérifications
+          // On s'arrête à la première condition vraie
 
-          // NOUVEAUX CAS : Vérifier le statut d'annulation
-          const cancelStatus = String(data.cancelStatus || '')
-          if (cancelStatus === 'pending' || cancelStatus === 'validated') {
-            lockText.textContent =
-              "Votre réservation fait l'objet d'une demande d'annulation"
-            lock.style.display = 'flex'
-          }
-
-          // NOUVEAUX CAS : Vérifier si la réservation a expiré
+          // 1. Vérifier si la réservation a expiré (priorité absolue)
           if (data.endDate) {
             const endDate = new Date(data.endDate)
             const today = new Date()
@@ -1400,8 +1379,45 @@
             if (endDate < today) {
               lockText.textContent = 'Votre réservation a expiré'
               lock.style.display = 'flex'
+              return // On s'arrête ici
             }
           }
+
+          // 2. Vérifier si la réservation est annulée
+          const cancelStatus = String(data.cancelStatus || '')
+          if (cancelStatus === 'validated') {
+            lockText.textContent = 'Réservation annulée'
+            lock.style.display = 'flex'
+            return // On s'arrête ici
+          }
+
+          // 3. Vérifier si l'annulation est en cours
+          if (cancelStatus === 'pending') {
+            lockText.textContent =
+              "Votre réservation fait l'objet d'une demande d'annulation"
+            lock.style.display = 'flex'
+            return // On s'arrête ici
+          }
+
+          // 4. Vérifier si l'acompte et le solde sont déjà réglés
+          const st = String(data.status || '')
+          if (st === 'balancePay') {
+            lockText.textContent =
+              t?.locks?.balance_paid || 'Acompte et solde déjà réglés'
+            lock.style.display = 'flex'
+            return // On s'arrête ici
+          }
+
+          // 5. Vérifier si l'acompte est déjà réglé
+          if (st === 'depositPay') {
+            lockText.textContent =
+              t?.locks?.deposit_paid || 'Acompte déjà réglé'
+            lock.style.display = 'flex'
+            return // On s'arrête ici
+          }
+
+          // Si aucune condition n'est vraie, pas de verrouillage
+          lock.style.display = 'none'
         }
       }
 
