--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -1367,7 +1367,7 @@
         if (lock && lockText) {
           const t = window.translations[currentLang]?.['finaliser-reservation']
 
-          // ✅ NOUVELLE LOGIQUE : Ordre chronologique des vérifications
+          // ✅ LOGIQUE CORRIGÉE : Ordre chronologique des vérifications
           // On s'arrête à la première condition vraie
 
           // 1. Vérifier si la réservation a expiré (priorité absolue)
@@ -1377,7 +1377,8 @@
             today.setHours(0, 0, 0, 0) // Remettre à minuit pour la comparaison
 
             if (endDate < today) {
-              lockText.textContent = 'Votre réservation a expiré'
+              lockText.textContent =
+                t?.locks?.reservation_expired || 'Votre réservation a expiré'
               lock.style.display = 'flex'
               return // On s'arrête ici
             }
@@ -1386,7 +1387,8 @@
           // 2. Vérifier si la réservation est annulée
           const cancelStatus = String(data.cancelStatus || '')
           if (cancelStatus === 'validated') {
-            lockText.textContent = 'Réservation annulée'
+            lockText.textContent =
+              t?.locks?.reservation_canceled || 'Réservation annulée'
             lock.style.display = 'flex'
             return // On s'arrête ici
           }
@@ -1394,6 +1396,7 @@
           // 3. Vérifier si l'annulation est en cours
           if (cancelStatus === 'pending') {
             lockText.textContent =
+              t?.locks?.cancellation_pending ||
               "Votre réservation fait l'objet d'une demande d'annulation"
             lock.style.display = 'flex'
             return // On s'arrête ici
